helmcharts/argocd/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/force-ssl-redirect: "false"
    traefik.ingress.kubernetes.io/forwarded-headers-insecure: "true"

spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - argocd.cicd.com
      secretName: argocd-tls
  rules:
    - host: argocd.cicd.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
